[package]
name = "dttools"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "dtEEMCG"
path = "src/bin/dtEEMCG.rs"

[[bin]]
name = "dtproton"
path = "src/bin/dtproton.rs"

[dependencies]
anyhow = "1"
calamine = "0.26"
regex = "1"
umya-spreadsheet = "2"
[dev-dependencies]
tempfile = "3"
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
